deploy: 8e12761cf44ac8ca244108502acf3fffb2e331b1

--- a/lectures/dsecon/fomc/04_training_datasets.html
+++ b/lectures/dsecon/fomc/04_training_datasets.html
@@ -1264,7 +1264,8 @@ evironment varialbles:
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/c163d2564de6c56e08959789b76ea1b9f31687f2735c54365a2ddc080ff6fe8d.png"><img alt="../../../_images/c163d2564de6c56e08959789b76ea1b9f31687f2735c54365a2ddc080ff6fe8d.png" src="../../../_images/c163d2564de6c56e08959789b76ea1b9f31687f2735c54365a2ddc080ff6fe8d.png" style="width: 1062px; height: 547px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/c163d2564de6c56e08959789b76ea1b9f31687f2735c54365a2ddc080ff6fe8d.png"><img alt="../../../_images/c163d2564de6c56e08959789b76ea1b9f31687f2735c54365a2ddc080ff6fe8d.png" src="../../../_images/c163d2564de6c56e08959789b76ea1b9f31687f2735c54365a2ddc080ff6fe8d.png" style="width: 1062px; height: 547px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
