--- a/lectures/dsecon/fomc/05_features.html
+++ b/lectures/dsecon/fomc/05_features.html
@@ -1623,7 +1623,8 @@ Name: target, dtype: object
 WARNING:matplotlib.font_manager:findfont: Generic family &#39;sans-serif&#39; not found because none of the following families were found: Arial, Liberation Sans, Bitstream Vera Sans, sans-serif
 </pre></div>
 </div>
-<a class="reference internal image-reference" href="../../../_images/debe9a721383540d21e38abbe0ef3a77bc427158b7573e15ad146c44eb0f42b8.png"><img alt="../../../_images/debe9a721383540d21e38abbe0ef3a77bc427158b7573e15ad146c44eb0f42b8.png" src="../../../_images/debe9a721383540d21e38abbe0ef3a77bc427158b7573e15ad146c44eb0f42b8.png" style="width: 708px; height: 420px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/debe9a721383540d21e38abbe0ef3a77bc427158b7573e15ad146c44eb0f42b8.png"><img alt="../../../_images/debe9a721383540d21e38abbe0ef3a77bc427158b7573e15ad146c44eb0f42b8.png" src="../../../_images/debe9a721383540d21e38abbe0ef3a77bc427158b7573e15ad146c44eb0f42b8.png" style="width: 708px; height: 420px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -1639,7 +1640,8 @@ WARNING:matplotlib.font_manager:findfont: Generic family &#39;sans-serif&#39; no
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/3d9ecd3dcad7ebeeb441b88bd779c80df0e0bf1f39eed86c37d453bd122f8051.png"><img alt="../../../_images/3d9ecd3dcad7ebeeb441b88bd779c80df0e0bf1f39eed86c37d453bd122f8051.png" src="../../../_images/3d9ecd3dcad7ebeeb441b88bd779c80df0e0bf1f39eed86c37d453bd122f8051.png" style="width: 704px; height: 416px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/3d9ecd3dcad7ebeeb441b88bd779c80df0e0bf1f39eed86c37d453bd122f8051.png"><img alt="../../../_images/3d9ecd3dcad7ebeeb441b88bd779c80df0e0bf1f39eed86c37d453bd122f8051.png" src="../../../_images/3d9ecd3dcad7ebeeb441b88bd779c80df0e0bf1f39eed86c37d453bd122f8051.png" style="width: 704px; height: 416px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -1654,7 +1656,8 @@ WARNING:matplotlib.font_manager:findfont: Generic family &#39;sans-serif&#39; no
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/d873b7f32a8bdbd479e8b233f92a0ff37b800f1181d7e3a926febc8081c30b2e.png"><img alt="../../../_images/d873b7f32a8bdbd479e8b233f92a0ff37b800f1181d7e3a926febc8081c30b2e.png" src="../../../_images/d873b7f32a8bdbd479e8b233f92a0ff37b800f1181d7e3a926febc8081c30b2e.png" style="width: 475px; height: 416px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/d873b7f32a8bdbd479e8b233f92a0ff37b800f1181d7e3a926febc8081c30b2e.png"><img alt="../../../_images/d873b7f32a8bdbd479e8b233f92a0ff37b800f1181d7e3a926febc8081c30b2e.png" src="../../../_images/d873b7f32a8bdbd479e8b233f92a0ff37b800f1181d7e3a926febc8081c30b2e.png" style="width: 475px; height: 416px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -1672,7 +1675,8 @@ WARNING:matplotlib.font_manager:findfont: Generic family &#39;sans-serif&#39; no
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/5708725f30e38a1307c756bbdf6ecad39627977487f89afd2f7bf01b4740de96.png"><img alt="../../../_images/5708725f30e38a1307c756bbdf6ecad39627977487f89afd2f7bf01b4740de96.png" src="../../../_images/5708725f30e38a1307c756bbdf6ecad39627977487f89afd2f7bf01b4740de96.png" style="width: 712px; height: 424px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/5708725f30e38a1307c756bbdf6ecad39627977487f89afd2f7bf01b4740de96.png"><img alt="../../../_images/5708725f30e38a1307c756bbdf6ecad39627977487f89afd2f7bf01b4740de96.png" src="../../../_images/5708725f30e38a1307c756bbdf6ecad39627977487f89afd2f7bf01b4740de96.png" style="width: 712px; height: 424px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -1688,7 +1692,8 @@ WARNING:matplotlib.font_manager:findfont: Generic family &#39;sans-serif&#39; no
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/018579615cac78923113dce292e386324385ec8268ed8c6f45c79b468af9afd7.png"><img alt="../../../_images/018579615cac78923113dce292e386324385ec8268ed8c6f45c79b468af9afd7.png" src="../../../_images/018579615cac78923113dce292e386324385ec8268ed8c6f45c79b468af9afd7.png" style="width: 704px; height: 416px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/018579615cac78923113dce292e386324385ec8268ed8c6f45c79b468af9afd7.png"><img alt="../../../_images/018579615cac78923113dce292e386324385ec8268ed8c6f45c79b468af9afd7.png" src="../../../_images/018579615cac78923113dce292e386324385ec8268ed8c6f45c79b468af9afd7.png" style="width: 704px; height: 416px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -1706,7 +1711,8 @@ WARNING:matplotlib.font_manager:findfont: Generic family &#39;sans-serif&#39; no
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/889299642535480566b19a819b1231734cc2bd6cdabad05c428280f6ee06d0a5.png"><img alt="../../../_images/889299642535480566b19a819b1231734cc2bd6cdabad05c428280f6ee06d0a5.png" src="../../../_images/889299642535480566b19a819b1231734cc2bd6cdabad05c428280f6ee06d0a5.png" style="width: 704px; height: 416px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/889299642535480566b19a819b1231734cc2bd6cdabad05c428280f6ee06d0a5.png"><img alt="../../../_images/889299642535480566b19a819b1231734cc2bd6cdabad05c428280f6ee06d0a5.png" src="../../../_images/889299642535480566b19a819b1231734cc2bd6cdabad05c428280f6ee06d0a5.png" style="width: 704px; height: 416px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -1729,7 +1735,8 @@ WARNING:matplotlib.font_manager:findfont: Generic family &#39;sans-serif&#39; no
   warnings.warn(
 </pre></div>
 </div>
-<a class="reference internal image-reference" href="../../../_images/93c771ad58b411a89813fad2416ac289b111303a1cbc53f5ed901320e8ccde23.png"><img alt="../../../_images/93c771ad58b411a89813fad2416ac289b111303a1cbc53f5ed901320e8ccde23.png" src="../../../_images/93c771ad58b411a89813fad2416ac289b111303a1cbc53f5ed901320e8ccde23.png" style="width: 704px; height: 416px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/93c771ad58b411a89813fad2416ac289b111303a1cbc53f5ed901320e8ccde23.png"><img alt="../../../_images/93c771ad58b411a89813fad2416ac289b111303a1cbc53f5ed901320e8ccde23.png" src="../../../_images/93c771ad58b411a89813fad2416ac289b111303a1cbc53f5ed901320e8ccde23.png" style="width: 704px; height: 416px;" />
+</a>
 </div>
 </div>
 </section>
