--- a/lectures/dsecon/fomc/06_AutoML.html
+++ b/lectures/dsecon/fomc/06_AutoML.html
@@ -848,7 +848,8 @@ Training duration of best run: 0.03197 s
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/ccd95c5506a3dfa0b10772c86a7a6d904f14c49894658c17904a62fc1c6992e3.png"><img alt="../../../_images/ccd95c5506a3dfa0b10772c86a7a6d904f14c49894658c17904a62fc1c6992e3.png" src="../../../_images/ccd95c5506a3dfa0b10772c86a7a6d904f14c49894658c17904a62fc1c6992e3.png" style="width: 701px; height: 331px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/ccd95c5506a3dfa0b10772c86a7a6d904f14c49894658c17904a62fc1c6992e3.png"><img alt="../../../_images/ccd95c5506a3dfa0b10772c86a7a6d904f14c49894658c17904a62fc1c6992e3.png" src="../../../_images/ccd95c5506a3dfa0b10772c86a7a6d904f14c49894658c17904a62fc1c6992e3.png" style="width: 701px; height: 331px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -878,7 +879,8 @@ ___________________________________________________
 weighted avg       0.65      0.68      0.63       104
 </pre></div>
 </div>
-<a class="reference internal image-reference" href="../../../_images/7b004a3a27c486283451bad1ba64e25c1d7d240899f23584b275a7a8493cdf17.png"><img alt="../../../_images/7b004a3a27c486283451bad1ba64e25c1d7d240899f23584b275a7a8493cdf17.png" src="../../../_images/7b004a3a27c486283451bad1ba64e25c1d7d240899f23584b275a7a8493cdf17.png" style="width: 631px; height: 331px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/7b004a3a27c486283451bad1ba64e25c1d7d240899f23584b275a7a8493cdf17.png"><img alt="../../../_images/7b004a3a27c486283451bad1ba64e25c1d7d240899f23584b275a7a8493cdf17.png" src="../../../_images/7b004a3a27c486283451bad1ba64e25c1d7d240899f23584b275a7a8493cdf17.png" style="width: 631px; height: 331px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -888,7 +890,8 @@ weighted avg       0.65      0.68      0.63       104
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/6e4c5cccc2702da9db6e8505a8b59198ac62f8b1f79651a5dd75079b05794b6e.png"><img alt="../../../_images/6e4c5cccc2702da9db6e8505a8b59198ac62f8b1f79651a5dd75079b05794b6e.png" src="../../../_images/6e4c5cccc2702da9db6e8505a8b59198ac62f8b1f79651a5dd75079b05794b6e.png" style="width: 701px; height: 331px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/6e4c5cccc2702da9db6e8505a8b59198ac62f8b1f79651a5dd75079b05794b6e.png"><img alt="../../../_images/6e4c5cccc2702da9db6e8505a8b59198ac62f8b1f79651a5dd75079b05794b6e.png" src="../../../_images/6e4c5cccc2702da9db6e8505a8b59198ac62f8b1f79651a5dd75079b05794b6e.png" style="width: 701px; height: 331px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
