--- a/lectures/dsecon/fomc/07_predict_sentiments.html
+++ b/lectures/dsecon/fomc/07_predict_sentiments.html
@@ -2654,7 +2654,8 @@ ___________________________________________________
 weighted avg       0.90      0.90      0.90       452
 </pre></div>
 </div>
-<a class="reference internal image-reference" href="../../../_images/b2e9a96506f9e457c17cf16198c49396b93e29bbc2fd153bdd62aa9c587f3a2e.png"><img alt="../../../_images/b2e9a96506f9e457c17cf16198c49396b93e29bbc2fd153bdd62aa9c587f3a2e.png" src="../../../_images/b2e9a96506f9e457c17cf16198c49396b93e29bbc2fd153bdd62aa9c587f3a2e.png" style="width: 637px; height: 331px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/b2e9a96506f9e457c17cf16198c49396b93e29bbc2fd153bdd62aa9c587f3a2e.png"><img alt="../../../_images/b2e9a96506f9e457c17cf16198c49396b93e29bbc2fd153bdd62aa9c587f3a2e.png" src="../../../_images/b2e9a96506f9e457c17cf16198c49396b93e29bbc2fd153bdd62aa9c587f3a2e.png" style="width: 637px; height: 331px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -3465,7 +3466,8 @@ ___________________________________________________
 weighted avg       0.95      0.95      0.95       452
 </pre></div>
 </div>
-<a class="reference internal image-reference" href="../../../_images/51d1f0d6180c5d2dcea5cfea86ea9f6030487a17f3441977eb0c59ff3412f185.png"><img alt="../../../_images/51d1f0d6180c5d2dcea5cfea86ea9f6030487a17f3441977eb0c59ff3412f185.png" src="../../../_images/51d1f0d6180c5d2dcea5cfea86ea9f6030487a17f3441977eb0c59ff3412f185.png" style="width: 637px; height: 331px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/51d1f0d6180c5d2dcea5cfea86ea9f6030487a17f3441977eb0c59ff3412f185.png"><img alt="../../../_images/51d1f0d6180c5d2dcea5cfea86ea9f6030487a17f3441977eb0c59ff3412f185.png" src="../../../_images/51d1f0d6180c5d2dcea5cfea86ea9f6030487a17f3441977eb0c59ff3412f185.png" style="width: 637px; height: 331px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
