--- a/lectures/dsecon/fomc/08_EDA_sentiments1.html
+++ b/lectures/dsecon/fomc/08_EDA_sentiments1.html
@@ -1641,7 +1641,8 @@ evironment varialbles:
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/1f75074f8eee6f72f4bd0595386d1ca3ef6f597652c2eabda2cdec713abd5684.png"><img alt="../../../_images/1f75074f8eee6f72f4bd0595386d1ca3ef6f597652c2eabda2cdec713abd5684.png" src="../../../_images/1f75074f8eee6f72f4bd0595386d1ca3ef6f597652c2eabda2cdec713abd5684.png" style="width: 702px; height: 331px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/1f75074f8eee6f72f4bd0595386d1ca3ef6f597652c2eabda2cdec713abd5684.png"><img alt="../../../_images/1f75074f8eee6f72f4bd0595386d1ca3ef6f597652c2eabda2cdec713abd5684.png" src="../../../_images/1f75074f8eee6f72f4bd0595386d1ca3ef6f597652c2eabda2cdec713abd5684.png" style="width: 702px; height: 331px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -2410,7 +2411,8 @@ evironment varialbles:
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/c086f07e2951ee59352c24bb3e96c271b3decb71e0ccf38c55ee13260d5d312c.png"><img alt="../../../_images/c086f07e2951ee59352c24bb3e96c271b3decb71e0ccf38c55ee13260d5d312c.png" src="../../../_images/c086f07e2951ee59352c24bb3e96c271b3decb71e0ccf38c55ee13260d5d312c.png" style="width: 779px; height: 547px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/c086f07e2951ee59352c24bb3e96c271b3decb71e0ccf38c55ee13260d5d312c.png"><img alt="../../../_images/c086f07e2951ee59352c24bb3e96c271b3decb71e0ccf38c55ee13260d5d312c.png" src="../../../_images/c086f07e2951ee59352c24bb3e96c271b3decb71e0ccf38c55ee13260d5d312c.png" style="width: 779px; height: 547px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -2430,7 +2432,8 @@ evironment varialbles:
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/2fa1b6309fc2f3548bff825dec2b3b7ec69cdcbbad888afebfe475d297b39e0d.png"><img alt="../../../_images/2fa1b6309fc2f3548bff825dec2b3b7ec69cdcbbad888afebfe475d297b39e0d.png" src="../../../_images/2fa1b6309fc2f3548bff825dec2b3b7ec69cdcbbad888afebfe475d297b39e0d.png" style="width: 514px; height: 403px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/2fa1b6309fc2f3548bff825dec2b3b7ec69cdcbbad888afebfe475d297b39e0d.png"><img alt="../../../_images/2fa1b6309fc2f3548bff825dec2b3b7ec69cdcbbad888afebfe475d297b39e0d.png" src="../../../_images/2fa1b6309fc2f3548bff825dec2b3b7ec69cdcbbad888afebfe475d297b39e0d.png" style="width: 514px; height: 403px;" />
+</a>
 </div>
 </div>
 </section>
