--- a/lectures/dsecon/fomc/08_EDA_sentiments2.html
+++ b/lectures/dsecon/fomc/08_EDA_sentiments2.html
@@ -1136,7 +1136,8 @@ evironment varialbles:
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/183e9c624eeb9cdf3692f2bda50cdb2c7297b7097f450414b5fb788fbe86a62c.png"><img alt="../../../_images/183e9c624eeb9cdf3692f2bda50cdb2c7297b7097f450414b5fb788fbe86a62c.png" src="../../../_images/183e9c624eeb9cdf3692f2bda50cdb2c7297b7097f450414b5fb788fbe86a62c.png" style="width: 701px; height: 331px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/183e9c624eeb9cdf3692f2bda50cdb2c7297b7097f450414b5fb788fbe86a62c.png"><img alt="../../../_images/183e9c624eeb9cdf3692f2bda50cdb2c7297b7097f450414b5fb788fbe86a62c.png" src="../../../_images/183e9c624eeb9cdf3692f2bda50cdb2c7297b7097f450414b5fb788fbe86a62c.png" style="width: 701px; height: 331px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -1154,7 +1155,8 @@ evironment varialbles:
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/98e6bc525d7de16ec25ed4dbecd75470af50acd099629b89dd50a88b4756aee6.png"><img alt="../../../_images/98e6bc525d7de16ec25ed4dbecd75470af50acd099629b89dd50a88b4756aee6.png" src="../../../_images/98e6bc525d7de16ec25ed4dbecd75470af50acd099629b89dd50a88b4756aee6.png" style="width: 701px; height: 331px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/98e6bc525d7de16ec25ed4dbecd75470af50acd099629b89dd50a88b4756aee6.png"><img alt="../../../_images/98e6bc525d7de16ec25ed4dbecd75470af50acd099629b89dd50a88b4756aee6.png" src="../../../_images/98e6bc525d7de16ec25ed4dbecd75470af50acd099629b89dd50a88b4756aee6.png" style="width: 701px; height: 331px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -1167,7 +1169,8 @@ evironment varialbles:
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/32419ab379705ef6918ae01b5211478b3afc46fe79d7342059f4491359fc3ce1.png"><img alt="../../../_images/32419ab379705ef6918ae01b5211478b3afc46fe79d7342059f4491359fc3ce1.png" src="../../../_images/32419ab379705ef6918ae01b5211478b3afc46fe79d7342059f4491359fc3ce1.png" style="width: 701px; height: 331px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/32419ab379705ef6918ae01b5211478b3afc46fe79d7342059f4491359fc3ce1.png"><img alt="../../../_images/32419ab379705ef6918ae01b5211478b3afc46fe79d7342059f4491359fc3ce1.png" src="../../../_images/32419ab379705ef6918ae01b5211478b3afc46fe79d7342059f4491359fc3ce1.png" style="width: 701px; height: 331px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -1199,7 +1202,8 @@ evironment varialbles:
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/1e2df3df5c24758eac021cfbac6c68561f6ce83582c8b261a51a83cb957ac233.png"><img alt="../../../_images/1e2df3df5c24758eac021cfbac6c68561f6ce83582c8b261a51a83cb957ac233.png" src="../../../_images/1e2df3df5c24758eac021cfbac6c68561f6ce83582c8b261a51a83cb957ac233.png" style="width: 701px; height: 331px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/1e2df3df5c24758eac021cfbac6c68561f6ce83582c8b261a51a83cb957ac233.png"><img alt="../../../_images/1e2df3df5c24758eac021cfbac6c68561f6ce83582c8b261a51a83cb957ac233.png" src="../../../_images/1e2df3df5c24758eac021cfbac6c68561f6ce83582c8b261a51a83cb957ac233.png" style="width: 701px; height: 331px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -1218,7 +1222,8 @@ evironment varialbles:
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/120fc998e89e1c3cae4a7c3741c125298fcaa991cea485c27fedea813dea5f45.png"><img alt="../../../_images/120fc998e89e1c3cae4a7c3741c125298fcaa991cea485c27fedea813dea5f45.png" src="../../../_images/120fc998e89e1c3cae4a7c3741c125298fcaa991cea485c27fedea813dea5f45.png" style="width: 702px; height: 331px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/120fc998e89e1c3cae4a7c3741c125298fcaa991cea485c27fedea813dea5f45.png"><img alt="../../../_images/120fc998e89e1c3cae4a7c3741c125298fcaa991cea485c27fedea813dea5f45.png" src="../../../_images/120fc998e89e1c3cae4a7c3741c125298fcaa991cea485c27fedea813dea5f45.png" style="width: 702px; height: 331px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -1237,7 +1242,8 @@ evironment varialbles:
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/ee8de91df754a78a888599bcc32f249fb1c6f3086c253c609f3214388cac581b.png"><img alt="../../../_images/ee8de91df754a78a888599bcc32f249fb1c6f3086c253c609f3214388cac581b.png" src="../../../_images/ee8de91df754a78a888599bcc32f249fb1c6f3086c253c609f3214388cac581b.png" style="width: 702px; height: 331px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/ee8de91df754a78a888599bcc32f249fb1c6f3086c253c609f3214388cac581b.png"><img alt="../../../_images/ee8de91df754a78a888599bcc32f249fb1c6f3086c253c609f3214388cac581b.png" src="../../../_images/ee8de91df754a78a888599bcc32f249fb1c6f3086c253c609f3214388cac581b.png" style="width: 702px; height: 331px;" />
+</a>
 </div>
 </div>
 <section id="plot-the-results-and-compare-to-the-economical-uncertainty-systemic-risk-periods">
@@ -1303,9 +1309,12 @@ evironment varialbles:
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/e7b7b217fd79417ac50546d3b6c71eee0da2bbec77fbd457e9eea4275645652d.png"><img alt="../../../_images/e7b7b217fd79417ac50546d3b6c71eee0da2bbec77fbd457e9eea4275645652d.png" src="../../../_images/e7b7b217fd79417ac50546d3b6c71eee0da2bbec77fbd457e9eea4275645652d.png" style="width: 701px; height: 331px;" /></a>
-<a class="reference internal image-reference" href="../../../_images/e4a7b35d8e33d343d017fa146c1847adc96c5650ff7b1516160e8fcc9e37c575.png"><img alt="../../../_images/e4a7b35d8e33d343d017fa146c1847adc96c5650ff7b1516160e8fcc9e37c575.png" src="../../../_images/e4a7b35d8e33d343d017fa146c1847adc96c5650ff7b1516160e8fcc9e37c575.png" style="width: 702px; height: 331px;" /></a>
-<a class="reference internal image-reference" href="../../../_images/52cfcf85b8851fbd567195facd689716d860ea6fa43d413f13278dc514a36b70.png"><img alt="../../../_images/52cfcf85b8851fbd567195facd689716d860ea6fa43d413f13278dc514a36b70.png" src="../../../_images/52cfcf85b8851fbd567195facd689716d860ea6fa43d413f13278dc514a36b70.png" style="width: 701px; height: 331px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/e7b7b217fd79417ac50546d3b6c71eee0da2bbec77fbd457e9eea4275645652d.png"><img alt="../../../_images/e7b7b217fd79417ac50546d3b6c71eee0da2bbec77fbd457e9eea4275645652d.png" src="../../../_images/e7b7b217fd79417ac50546d3b6c71eee0da2bbec77fbd457e9eea4275645652d.png" style="width: 701px; height: 331px;" />
+</a>
+<a class="reference internal image-reference" href="../../../_images/e4a7b35d8e33d343d017fa146c1847adc96c5650ff7b1516160e8fcc9e37c575.png"><img alt="../../../_images/e4a7b35d8e33d343d017fa146c1847adc96c5650ff7b1516160e8fcc9e37c575.png" src="../../../_images/e4a7b35d8e33d343d017fa146c1847adc96c5650ff7b1516160e8fcc9e37c575.png" style="width: 702px; height: 331px;" />
+</a>
+<a class="reference internal image-reference" href="../../../_images/52cfcf85b8851fbd567195facd689716d860ea6fa43d413f13278dc514a36b70.png"><img alt="../../../_images/52cfcf85b8851fbd567195facd689716d860ea6fa43d413f13278dc514a36b70.png" src="../../../_images/52cfcf85b8851fbd567195facd689716d860ea6fa43d413f13278dc514a36b70.png" style="width: 701px; height: 331px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -1321,9 +1330,12 @@ evironment varialbles:
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/2ef6e64ff8a1305bcd29fc10f68bb6df7303294b7115d1b961568f1078f48ae8.png"><img alt="../../../_images/2ef6e64ff8a1305bcd29fc10f68bb6df7303294b7115d1b961568f1078f48ae8.png" src="../../../_images/2ef6e64ff8a1305bcd29fc10f68bb6df7303294b7115d1b961568f1078f48ae8.png" style="width: 701px; height: 331px;" /></a>
-<a class="reference internal image-reference" href="../../../_images/b905fd992e8a7bc0c8c3d2df095d3fbb695cb8e54e2e293abff1031056a54438.png"><img alt="../../../_images/b905fd992e8a7bc0c8c3d2df095d3fbb695cb8e54e2e293abff1031056a54438.png" src="../../../_images/b905fd992e8a7bc0c8c3d2df095d3fbb695cb8e54e2e293abff1031056a54438.png" style="width: 702px; height: 331px;" /></a>
-<a class="reference internal image-reference" href="../../../_images/445d8693815e44b49297dd192232a07836ca1ffc177167ac7168e6fca10b9358.png"><img alt="../../../_images/445d8693815e44b49297dd192232a07836ca1ffc177167ac7168e6fca10b9358.png" src="../../../_images/445d8693815e44b49297dd192232a07836ca1ffc177167ac7168e6fca10b9358.png" style="width: 702px; height: 331px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/2ef6e64ff8a1305bcd29fc10f68bb6df7303294b7115d1b961568f1078f48ae8.png"><img alt="../../../_images/2ef6e64ff8a1305bcd29fc10f68bb6df7303294b7115d1b961568f1078f48ae8.png" src="../../../_images/2ef6e64ff8a1305bcd29fc10f68bb6df7303294b7115d1b961568f1078f48ae8.png" style="width: 701px; height: 331px;" />
+</a>
+<a class="reference internal image-reference" href="../../../_images/b905fd992e8a7bc0c8c3d2df095d3fbb695cb8e54e2e293abff1031056a54438.png"><img alt="../../../_images/b905fd992e8a7bc0c8c3d2df095d3fbb695cb8e54e2e293abff1031056a54438.png" src="../../../_images/b905fd992e8a7bc0c8c3d2df095d3fbb695cb8e54e2e293abff1031056a54438.png" style="width: 702px; height: 331px;" />
+</a>
+<a class="reference internal image-reference" href="../../../_images/445d8693815e44b49297dd192232a07836ca1ffc177167ac7168e6fca10b9358.png"><img alt="../../../_images/445d8693815e44b49297dd192232a07836ca1ffc177167ac7168e6fca10b9358.png" src="../../../_images/445d8693815e44b49297dd192232a07836ca1ffc177167ac7168e6fca10b9358.png" style="width: 702px; height: 331px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -1416,9 +1428,12 @@ evironment varialbles:
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/9ce0286b5565e32515e4fac603a281509321a545fc3bceff5d6b0f197ffd34b9.png"><img alt="../../../_images/9ce0286b5565e32515e4fac603a281509321a545fc3bceff5d6b0f197ffd34b9.png" src="../../../_images/9ce0286b5565e32515e4fac603a281509321a545fc3bceff5d6b0f197ffd34b9.png" style="width: 702px; height: 331px;" /></a>
-<a class="reference internal image-reference" href="../../../_images/958cf80d504d111551c4dbcbb21ce2039decc7b1398ac951f761a1ec8d66031c.png"><img alt="../../../_images/958cf80d504d111551c4dbcbb21ce2039decc7b1398ac951f761a1ec8d66031c.png" src="../../../_images/958cf80d504d111551c4dbcbb21ce2039decc7b1398ac951f761a1ec8d66031c.png" style="width: 702px; height: 331px;" /></a>
-<a class="reference internal image-reference" href="../../../_images/dfefdf1a314a248729080c670d135492991c6613ff4973e74963e651098ceb31.png"><img alt="../../../_images/dfefdf1a314a248729080c670d135492991c6613ff4973e74963e651098ceb31.png" src="../../../_images/dfefdf1a314a248729080c670d135492991c6613ff4973e74963e651098ceb31.png" style="width: 702px; height: 331px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/9ce0286b5565e32515e4fac603a281509321a545fc3bceff5d6b0f197ffd34b9.png"><img alt="../../../_images/9ce0286b5565e32515e4fac603a281509321a545fc3bceff5d6b0f197ffd34b9.png" src="../../../_images/9ce0286b5565e32515e4fac603a281509321a545fc3bceff5d6b0f197ffd34b9.png" style="width: 702px; height: 331px;" />
+</a>
+<a class="reference internal image-reference" href="../../../_images/958cf80d504d111551c4dbcbb21ce2039decc7b1398ac951f761a1ec8d66031c.png"><img alt="../../../_images/958cf80d504d111551c4dbcbb21ce2039decc7b1398ac951f761a1ec8d66031c.png" src="../../../_images/958cf80d504d111551c4dbcbb21ce2039decc7b1398ac951f761a1ec8d66031c.png" style="width: 702px; height: 331px;" />
+</a>
+<a class="reference internal image-reference" href="../../../_images/dfefdf1a314a248729080c670d135492991c6613ff4973e74963e651098ceb31.png"><img alt="../../../_images/dfefdf1a314a248729080c670d135492991c6613ff4973e74963e651098ceb31.png" src="../../../_images/dfefdf1a314a248729080c670d135492991c6613ff4973e74963e651098ceb31.png" style="width: 702px; height: 331px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -1434,9 +1449,12 @@ evironment varialbles:
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/70155c141cd2a4a38fa29e3e3997d55376b8a23c87b6d6c6f41d52bda44c1f6a.png"><img alt="../../../_images/70155c141cd2a4a38fa29e3e3997d55376b8a23c87b6d6c6f41d52bda44c1f6a.png" src="../../../_images/70155c141cd2a4a38fa29e3e3997d55376b8a23c87b6d6c6f41d52bda44c1f6a.png" style="width: 702px; height: 331px;" /></a>
-<a class="reference internal image-reference" href="../../../_images/342d4a098c875d755d9672737bc01126891556e82811c3f90e42477ada5bb208.png"><img alt="../../../_images/342d4a098c875d755d9672737bc01126891556e82811c3f90e42477ada5bb208.png" src="../../../_images/342d4a098c875d755d9672737bc01126891556e82811c3f90e42477ada5bb208.png" style="width: 702px; height: 331px;" /></a>
-<a class="reference internal image-reference" href="../../../_images/264de6704848baabd60952ace8f83257ef93cfd886dc86b5ec953ccc2493c7e3.png"><img alt="../../../_images/264de6704848baabd60952ace8f83257ef93cfd886dc86b5ec953ccc2493c7e3.png" src="../../../_images/264de6704848baabd60952ace8f83257ef93cfd886dc86b5ec953ccc2493c7e3.png" style="width: 702px; height: 331px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/70155c141cd2a4a38fa29e3e3997d55376b8a23c87b6d6c6f41d52bda44c1f6a.png"><img alt="../../../_images/70155c141cd2a4a38fa29e3e3997d55376b8a23c87b6d6c6f41d52bda44c1f6a.png" src="../../../_images/70155c141cd2a4a38fa29e3e3997d55376b8a23c87b6d6c6f41d52bda44c1f6a.png" style="width: 702px; height: 331px;" />
+</a>
+<a class="reference internal image-reference" href="../../../_images/342d4a098c875d755d9672737bc01126891556e82811c3f90e42477ada5bb208.png"><img alt="../../../_images/342d4a098c875d755d9672737bc01126891556e82811c3f90e42477ada5bb208.png" src="../../../_images/342d4a098c875d755d9672737bc01126891556e82811c3f90e42477ada5bb208.png" style="width: 702px; height: 331px;" />
+</a>
+<a class="reference internal image-reference" href="../../../_images/264de6704848baabd60952ace8f83257ef93cfd886dc86b5ec953ccc2493c7e3.png"><img alt="../../../_images/264de6704848baabd60952ace8f83257ef93cfd886dc86b5ec953ccc2493c7e3.png" src="../../../_images/264de6704848baabd60952ace8f83257ef93cfd886dc86b5ec953ccc2493c7e3.png" style="width: 702px; height: 331px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -1448,9 +1466,12 @@ evironment varialbles:
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/3069c2118b9089819a80c6d30db38d8f00021c611ff09a37c59ee369246bb52b.png"><img alt="../../../_images/3069c2118b9089819a80c6d30db38d8f00021c611ff09a37c59ee369246bb52b.png" src="../../../_images/3069c2118b9089819a80c6d30db38d8f00021c611ff09a37c59ee369246bb52b.png" style="width: 702px; height: 331px;" /></a>
-<a class="reference internal image-reference" href="../../../_images/b4cf798778e68fa69a90602ce93cd3dd3b0d69110a59c6e988d90d9bc5f34c2d.png"><img alt="../../../_images/b4cf798778e68fa69a90602ce93cd3dd3b0d69110a59c6e988d90d9bc5f34c2d.png" src="../../../_images/b4cf798778e68fa69a90602ce93cd3dd3b0d69110a59c6e988d90d9bc5f34c2d.png" style="width: 702px; height: 331px;" /></a>
-<a class="reference internal image-reference" href="../../../_images/cef20b63b33c61728fb6b5b3a6ca15458734562971293cc6c01d02f619885584.png"><img alt="../../../_images/cef20b63b33c61728fb6b5b3a6ca15458734562971293cc6c01d02f619885584.png" src="../../../_images/cef20b63b33c61728fb6b5b3a6ca15458734562971293cc6c01d02f619885584.png" style="width: 702px; height: 331px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/3069c2118b9089819a80c6d30db38d8f00021c611ff09a37c59ee369246bb52b.png"><img alt="../../../_images/3069c2118b9089819a80c6d30db38d8f00021c611ff09a37c59ee369246bb52b.png" src="../../../_images/3069c2118b9089819a80c6d30db38d8f00021c611ff09a37c59ee369246bb52b.png" style="width: 702px; height: 331px;" />
+</a>
+<a class="reference internal image-reference" href="../../../_images/b4cf798778e68fa69a90602ce93cd3dd3b0d69110a59c6e988d90d9bc5f34c2d.png"><img alt="../../../_images/b4cf798778e68fa69a90602ce93cd3dd3b0d69110a59c6e988d90d9bc5f34c2d.png" src="../../../_images/b4cf798778e68fa69a90602ce93cd3dd3b0d69110a59c6e988d90d9bc5f34c2d.png" style="width: 702px; height: 331px;" />
+</a>
+<a class="reference internal image-reference" href="../../../_images/cef20b63b33c61728fb6b5b3a6ca15458734562971293cc6c01d02f619885584.png"><img alt="../../../_images/cef20b63b33c61728fb6b5b3a6ca15458734562971293cc6c01d02f619885584.png" src="../../../_images/cef20b63b33c61728fb6b5b3a6ca15458734562971293cc6c01d02f619885584.png" style="width: 702px; height: 331px;" />
+</a>
 </div>
 </div>
 </section>
