--- a/lectures/dsecon/fomc/09_visualize_features.html
+++ b/lectures/dsecon/fomc/09_visualize_features.html
@@ -1658,7 +1658,8 @@ WARNING:ekorpkit.datasets.base:File fomc_tone_features-dev.parquet not found.
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/8949f9ec88cb890b6a7d5c70827b1e1016beca0df4e2cabd295c425edb60f1ba.png"><img alt="../../../_images/8949f9ec88cb890b6a7d5c70827b1e1016beca0df4e2cabd295c425edb60f1ba.png" src="../../../_images/8949f9ec88cb890b6a7d5c70827b1e1016beca0df4e2cabd295c425edb60f1ba.png" style="width: 708px; height: 348px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/8949f9ec88cb890b6a7d5c70827b1e1016beca0df4e2cabd295c425edb60f1ba.png"><img alt="../../../_images/8949f9ec88cb890b6a7d5c70827b1e1016beca0df4e2cabd295c425edb60f1ba.png" src="../../../_images/8949f9ec88cb890b6a7d5c70827b1e1016beca0df4e2cabd295c425edb60f1ba.png" style="width: 708px; height: 348px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -1672,7 +1673,8 @@ WARNING:ekorpkit.datasets.base:File fomc_tone_features-dev.parquet not found.
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/181d468b9274511b7227429b0df85ba9be02c2f8f0367d7a81de3dc71369727e.png"><img alt="../../../_images/181d468b9274511b7227429b0df85ba9be02c2f8f0367d7a81de3dc71369727e.png" src="../../../_images/181d468b9274511b7227429b0df85ba9be02c2f8f0367d7a81de3dc71369727e.png" style="width: 633px; height: 568px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/181d468b9274511b7227429b0df85ba9be02c2f8f0367d7a81de3dc71369727e.png"><img alt="../../../_images/181d468b9274511b7227429b0df85ba9be02c2f8f0367d7a81de3dc71369727e.png" src="../../../_images/181d468b9274511b7227429b0df85ba9be02c2f8f0367d7a81de3dc71369727e.png" style="width: 633px; height: 568px;" />
+</a>
 </div>
 </div>
 </section>
