--- a/lectures/dsecon/fomc/10_monetary_shocks.html
+++ b/lectures/dsecon/fomc/10_monetary_shocks.html
@@ -1077,7 +1077,8 @@ evironment varialbles:
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/83a9012e181cc0e998e4a068387517323100b25d6793069a112ad09690b41841.png"><img alt="../../../_images/83a9012e181cc0e998e4a068387517323100b25d6793069a112ad09690b41841.png" src="../../../_images/83a9012e181cc0e998e4a068387517323100b25d6793069a112ad09690b41841.png" style="width: 1133px; height: 839px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/83a9012e181cc0e998e4a068387517323100b25d6793069a112ad09690b41841.png"><img alt="../../../_images/83a9012e181cc0e998e4a068387517323100b25d6793069a112ad09690b41841.png" src="../../../_images/83a9012e181cc0e998e4a068387517323100b25d6793069a112ad09690b41841.png" style="width: 1133px; height: 839px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -1087,8 +1088,10 @@ evironment varialbles:
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/bf801cc1dbe195bfd6a5a661ae18af40a916faf5f2823b3732dc53144ea00652.png"><img alt="../../../_images/bf801cc1dbe195bfd6a5a661ae18af40a916faf5f2823b3732dc53144ea00652.png" src="../../../_images/bf801cc1dbe195bfd6a5a661ae18af40a916faf5f2823b3732dc53144ea00652.png" style="width: 1134px; height: 839px;" /></a>
-<a class="reference internal image-reference" href="../../../_images/7b7cc8f5fd25be2e1184262c8ba19b32759fa29bf6e38288518216322ab3b314.png"><img alt="../../../_images/7b7cc8f5fd25be2e1184262c8ba19b32759fa29bf6e38288518216322ab3b314.png" src="../../../_images/7b7cc8f5fd25be2e1184262c8ba19b32759fa29bf6e38288518216322ab3b314.png" style="width: 1134px; height: 839px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/bf801cc1dbe195bfd6a5a661ae18af40a916faf5f2823b3732dc53144ea00652.png"><img alt="../../../_images/bf801cc1dbe195bfd6a5a661ae18af40a916faf5f2823b3732dc53144ea00652.png" src="../../../_images/bf801cc1dbe195bfd6a5a661ae18af40a916faf5f2823b3732dc53144ea00652.png" style="width: 1134px; height: 839px;" />
+</a>
+<a class="reference internal image-reference" href="../../../_images/7b7cc8f5fd25be2e1184262c8ba19b32759fa29bf6e38288518216322ab3b314.png"><img alt="../../../_images/7b7cc8f5fd25be2e1184262c8ba19b32759fa29bf6e38288518216322ab3b314.png" src="../../../_images/7b7cc8f5fd25be2e1184262c8ba19b32759fa29bf6e38288518216322ab3b314.png" style="width: 1134px; height: 839px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -1098,7 +1101,8 @@ evironment varialbles:
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/c069981c36fded64bcbdbc96e297a0567cd48aef4ed1ac29a1e1e78c7c98f341.png"><img alt="../../../_images/c069981c36fded64bcbdbc96e297a0567cd48aef4ed1ac29a1e1e78c7c98f341.png" src="../../../_images/c069981c36fded64bcbdbc96e297a0567cd48aef4ed1ac29a1e1e78c7c98f341.png" style="width: 1134px; height: 839px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/c069981c36fded64bcbdbc96e297a0567cd48aef4ed1ac29a1e1e78c7c98f341.png"><img alt="../../../_images/c069981c36fded64bcbdbc96e297a0567cd48aef4ed1ac29a1e1e78c7c98f341.png" src="../../../_images/c069981c36fded64bcbdbc96e297a0567cd48aef4ed1ac29a1e1e78c7c98f341.png" style="width: 1134px; height: 839px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -1108,7 +1112,8 @@ evironment varialbles:
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/85f8c58d891a1433214ac3a6c0d97757eaeeffc6fe271cbe9a2a8bffce91e01c.png"><img alt="../../../_images/85f8c58d891a1433214ac3a6c0d97757eaeeffc6fe271cbe9a2a8bffce91e01c.png" src="../../../_images/85f8c58d891a1433214ac3a6c0d97757eaeeffc6fe271cbe9a2a8bffce91e01c.png" style="width: 1134px; height: 839px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/85f8c58d891a1433214ac3a6c0d97757eaeeffc6fe271cbe9a2a8bffce91e01c.png"><img alt="../../../_images/85f8c58d891a1433214ac3a6c0d97757eaeeffc6fe271cbe9a2a8bffce91e01c.png" src="../../../_images/85f8c58d891a1433214ac3a6c0d97757eaeeffc6fe271cbe9a2a8bffce91e01c.png" style="width: 1134px; height: 839px;" />
+</a>
 </div>
 </div>
 </section>
