--- a/lectures/nlp_intro/embeddings/fasttext.html
+++ b/lectures/nlp_intro/embeddings/fasttext.html
@@ -735,7 +735,8 @@ document.write(`
 <li><p>Less data is required to train the model, since the model is trained on character n-grams instead of words. A word can be its own context, yielding more information from the same amount of data.</p></li>
 </ul>
 <p>For example, the word <code class="docutils literal notranslate"><span class="pre">reading</span></code> generates the following character n-grams:</p>
-<a class="bg-primary mb-1 reference internal image-reference" href="../../../_images/character_ngrams.png"><img alt="character_ngrams" class="bg-primary mb-1 align-center" src="../../../_images/character_ngrams.png" style="width: 300px;" /></a>
+<a class="bg-primary mb-1 reference internal image-reference" href="../../../_images/character_ngrams.png"><img alt="character_ngrams" class="bg-primary mb-1 align-center" src="../../../_images/character_ngrams.png" style="width: 300px;" />
+</a>
 <ul class="simple">
 <li><p>Angular brackets represent the start and end of a word.</p></li>
 <li><p>Instead of using each unique n-gram as a feature, FastText uses the hash value of the n-gram as a feature. This reduces the number of features and makes the model more efficient.</p></li>
