--- a/lectures/nlp_intro/embeddings/glove.html
+++ b/lectures/nlp_intro/embeddings/glove.html
@@ -736,7 +736,8 @@ document.write(`
 <p><strong>Document 1:</strong> “All that glitters is not gold.”</p>
 <p><strong>Document 2:</strong> “ All is well that ends well.”</p>
 <p>Then, with a window size of 1, the co-occurrence matrix of the words in the corpus is:</p>
-<a class="bg-primary mb-1 reference internal image-reference" href="../../../_images/co-occurrence_matrix.png"><img alt="co-occurrence_matrix" class="bg-primary mb-1 align-center" src="../../../_images/co-occurrence_matrix.png" style="width: 500px;" /></a>
+<a class="bg-primary mb-1 reference internal image-reference" href="../../../_images/co-occurrence_matrix.png"><img alt="co-occurrence_matrix" class="bg-primary mb-1 align-center" src="../../../_images/co-occurrence_matrix.png" style="width: 500px;" />
+</a>
 <ul class="simple">
 <li><p>The rows and columns represent the words in the corpus.</p></li>
 <li><p><code class="docutils literal notranslate"><span class="pre">&lt;START&gt;</span></code> and <code class="docutils literal notranslate"><span class="pre">&lt;END&gt;</span></code> are special tokens that represent the start and end of a sentence.</p></li>
