--- a/lectures/nlp_intro/tokenization/segmentation.html
+++ b/lectures/nlp_intro/tokenization/segmentation.html
@@ -1115,7 +1115,8 @@ Top 10 subwords: [(&#39;▁&#39;, 114), (&#39;e&#39;, 63), (&#39;p&#39;, 59), (&
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/af09e769dea1f8fa572155f4b84df116656b0cb0182458dec6aa1a94d69646f2.png"><img alt="../../../_images/af09e769dea1f8fa572155f4b84df116656b0cb0182458dec6aa1a94d69646f2.png" src="../../../_images/af09e769dea1f8fa572155f4b84df116656b0cb0182458dec6aa1a94d69646f2.png" style="width: 712px; height: 302px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/af09e769dea1f8fa572155f4b84df116656b0cb0182458dec6aa1a94d69646f2.png"><img alt="../../../_images/af09e769dea1f8fa572155f4b84df116656b0cb0182458dec6aa1a94d69646f2.png" src="../../../_images/af09e769dea1f8fa572155f4b84df116656b0cb0182458dec6aa1a94d69646f2.png" style="width: 712px; height: 302px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -1125,7 +1126,8 @@ Top 10 subwords: [(&#39;▁&#39;, 114), (&#39;e&#39;, 63), (&#39;p&#39;, 59), (&
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/4b36486a717ab2df2f960832828af14cc1fd1b371fd786ec73d41cf8c1884922.png"><img alt="../../../_images/4b36486a717ab2df2f960832828af14cc1fd1b371fd786ec73d41cf8c1884922.png" src="../../../_images/4b36486a717ab2df2f960832828af14cc1fd1b371fd786ec73d41cf8c1884922.png" style="width: 712px; height: 302px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/4b36486a717ab2df2f960832828af14cc1fd1b371fd786ec73d41cf8c1884922.png"><img alt="../../../_images/4b36486a717ab2df2f960832828af14cc1fd1b371fd786ec73d41cf8c1884922.png" src="../../../_images/4b36486a717ab2df2f960832828af14cc1fd1b371fd786ec73d41cf8c1884922.png" style="width: 712px; height: 302px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -1326,7 +1328,8 @@ Top 10 subwords: [(&#39;▁&#39;, 70), (&#39;방&#39;, 15), (&#39;가&#39;, 12),
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/ee41d1db4177ac43e03fe1101a782139db9aebd43b3df8d89c9a7eb53e39ea4a.png"><img alt="../../../_images/ee41d1db4177ac43e03fe1101a782139db9aebd43b3df8d89c9a7eb53e39ea4a.png" src="../../../_images/ee41d1db4177ac43e03fe1101a782139db9aebd43b3df8d89c9a7eb53e39ea4a.png" style="width: 712px; height: 302px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/ee41d1db4177ac43e03fe1101a782139db9aebd43b3df8d89c9a7eb53e39ea4a.png"><img alt="../../../_images/ee41d1db4177ac43e03fe1101a782139db9aebd43b3df8d89c9a7eb53e39ea4a.png" src="../../../_images/ee41d1db4177ac43e03fe1101a782139db9aebd43b3df8d89c9a7eb53e39ea4a.png" style="width: 712px; height: 302px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -1336,7 +1339,8 @@ Top 10 subwords: [(&#39;▁&#39;, 70), (&#39;방&#39;, 15), (&#39;가&#39;, 12),
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/f434f6725e667e93910c4d7da9270a018daea035d9542926bb3f23ab27a3e0fd.png"><img alt="../../../_images/f434f6725e667e93910c4d7da9270a018daea035d9542926bb3f23ab27a3e0fd.png" src="../../../_images/f434f6725e667e93910c4d7da9270a018daea035d9542926bb3f23ab27a3e0fd.png" style="width: 712px; height: 302px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/f434f6725e667e93910c4d7da9270a018daea035d9542926bb3f23ab27a3e0fd.png"><img alt="../../../_images/f434f6725e667e93910c4d7da9270a018daea035d9542926bb3f23ab27a3e0fd.png" src="../../../_images/f434f6725e667e93910c4d7da9270a018daea035d9542926bb3f23ab27a3e0fd.png" style="width: 712px; height: 302px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -1346,7 +1350,8 @@ Top 10 subwords: [(&#39;▁&#39;, 70), (&#39;방&#39;, 15), (&#39;가&#39;, 12),
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/7e63acf5a1b356141e942b5220df6cf852ba47ac4633039fd46282bce1ceee98.png"><img alt="../../../_images/7e63acf5a1b356141e942b5220df6cf852ba47ac4633039fd46282bce1ceee98.png" src="../../../_images/7e63acf5a1b356141e942b5220df6cf852ba47ac4633039fd46282bce1ceee98.png" style="width: 712px; height: 302px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/7e63acf5a1b356141e942b5220df6cf852ba47ac4633039fd46282bce1ceee98.png"><img alt="../../../_images/7e63acf5a1b356141e942b5220df6cf852ba47ac4633039fd46282bce1ceee98.png" src="../../../_images/7e63acf5a1b356141e942b5220df6cf852ba47ac4633039fd46282bce1ceee98.png" style="width: 712px; height: 302px;" />
+</a>
 </div>
 </div>
 </section>
@@ -1468,7 +1473,8 @@ Top 10 subwords: [(&#39;▁&#39;, 26177132), (&#39;e&#39;, 7246161), (&#39;t&#39
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/b698e9dc5831e95a10892c40f241352b46996a27955cb0eea1bc9ca4383b25f2.png"><img alt="../../../_images/b698e9dc5831e95a10892c40f241352b46996a27955cb0eea1bc9ca4383b25f2.png" src="../../../_images/b698e9dc5831e95a10892c40f241352b46996a27955cb0eea1bc9ca4383b25f2.png" style="width: 706px; height: 302px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/b698e9dc5831e95a10892c40f241352b46996a27955cb0eea1bc9ca4383b25f2.png"><img alt="../../../_images/b698e9dc5831e95a10892c40f241352b46996a27955cb0eea1bc9ca4383b25f2.png" src="../../../_images/b698e9dc5831e95a10892c40f241352b46996a27955cb0eea1bc9ca4383b25f2.png" style="width: 706px; height: 302px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -1506,7 +1512,8 @@ Top 10 subwords: [(&#39;▁&#39;, 26177132), (&#39;e&#39;, 7246161), (&#39;t&#39
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/6c9bef3bc133a8b342ee8f2c8a130c7e37c4cec2b80e4c8396adac7989ebbde8.png"><img alt="../../../_images/6c9bef3bc133a8b342ee8f2c8a130c7e37c4cec2b80e4c8396adac7989ebbde8.png" src="../../../_images/6c9bef3bc133a8b342ee8f2c8a130c7e37c4cec2b80e4c8396adac7989ebbde8.png" style="width: 706px; height: 302px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/6c9bef3bc133a8b342ee8f2c8a130c7e37c4cec2b80e4c8396adac7989ebbde8.png"><img alt="../../../_images/6c9bef3bc133a8b342ee8f2c8a130c7e37c4cec2b80e4c8396adac7989ebbde8.png" src="../../../_images/6c9bef3bc133a8b342ee8f2c8a130c7e37c4cec2b80e4c8396adac7989ebbde8.png" style="width: 706px; height: 302px;" />
+</a>
 </div>
 </div>
 </section>
