--- a/lectures/nlp_intro/topic/lab-coherence.html
+++ b/lectures/nlp_intro/topic/lab-coherence.html
@@ -1088,7 +1088,8 @@ document.write(`
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/004167822c736918d6736e070d5a1c48b4fd9858a3f7ee4c8e5db66a70b9d0ff.png"><img alt="../../../_images/004167822c736918d6736e070d5a1c48b4fd9858a3f7ee4c8e5db66a70b9d0ff.png" src="../../../_images/004167822c736918d6736e070d5a1c48b4fd9858a3f7ee4c8e5db66a70b9d0ff.png" style="width: 1236px; height: 739px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/004167822c736918d6736e070d5a1c48b4fd9858a3f7ee4c8e5db66a70b9d0ff.png"><img alt="../../../_images/004167822c736918d6736e070d5a1c48b4fd9858a3f7ee4c8e5db66a70b9d0ff.png" src="../../../_images/004167822c736918d6736e070d5a1c48b4fd9858a3f7ee4c8e5db66a70b9d0ff.png" style="width: 1236px; height: 739px;" />
+</a>
 </div>
 </div>
 </section>
