--- a/lectures/dsecon/fomc/02_textual_data.html
+++ b/lectures/dsecon/fomc/02_textual_data.html
@@ -1485,7 +1485,8 @@ INFO:ekorpkit.io.file:Loading data from ../data/fomc/fomc_corpus.parquet
 INFO:ekorpkit.visualize.base:Saved figure to /workspace/projects/ekorpkit-book/outputs/figs/CountPlot.png
 </pre></div>
 </div>
-<a class="reference internal image-reference" href="../../../_images/14a0eadce3ca1572152470daccec08fdaccb4c881dd4e78ee3b58b4e3956f413.png"><img alt="../../../_images/14a0eadce3ca1572152470daccec08fdaccb4c881dd4e78ee3b58b4e3956f413.png" src="../../../_images/14a0eadce3ca1572152470daccec08fdaccb4c881dd4e78ee3b58b4e3956f413.png" style="width: 701px; height: 331px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/14a0eadce3ca1572152470daccec08fdaccb4c881dd4e78ee3b58b4e3956f413.png"><img alt="../../../_images/14a0eadce3ca1572152470daccec08fdaccb4c881dd4e78ee3b58b4e3956f413.png" src="../../../_images/14a0eadce3ca1572152470daccec08fdaccb4c881dd4e78ee3b58b4e3956f413.png" style="width: 701px; height: 331px;" />
+</a>
 </div>
 </div>
 <section id="distribution-of-corpus">
@@ -1529,7 +1530,8 @@ INFO:ekorpkit.visualize.plot:Plotting histplot with {&#39;x&#39;: &#39;text_num_
 INFO:ekorpkit.visualize.base:Saved figure to /workspace/projects/ekorpkit-book/outputs/figs/HistPlot.png
 </pre></div>
 </div>
-<a class="reference internal image-reference" href="../../../_images/8696c977110bb55a3821516affba66a0fc5d4b1ccc747d3e52ea1f58ceee2644.png"><img alt="../../../_images/8696c977110bb55a3821516affba66a0fc5d4b1ccc747d3e52ea1f58ceee2644.png" src="../../../_images/8696c977110bb55a3821516affba66a0fc5d4b1ccc747d3e52ea1f58ceee2644.png" style="width: 1278px; height: 1123px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/8696c977110bb55a3821516affba66a0fc5d4b1ccc747d3e52ea1f58ceee2644.png"><img alt="../../../_images/8696c977110bb55a3821516affba66a0fc5d4b1ccc747d3e52ea1f58ceee2644.png" src="../../../_images/8696c977110bb55a3821516affba66a0fc5d4b1ccc747d3e52ea1f58ceee2644.png" style="width: 1278px; height: 1123px;" />
+</a>
 </div>
 </div>
 </section>
@@ -1907,7 +1909,8 @@ INFO:ekorpkit.io.file:Loading data from ../data/fomc/fomc_sections.parquet
 INFO:ekorpkit.visualize.base:Saved figure to /workspace/projects/ekorpkit-book/outputs/figs/CountPlot.png
 </pre></div>
 </div>
-<a class="reference internal image-reference" href="../../../_images/5528afa9986c85eea7a34eddb1601246786173b055a70042ec1995362f93cc05.png"><img alt="../../../_images/5528afa9986c85eea7a34eddb1601246786173b055a70042ec1995362f93cc05.png" src="../../../_images/5528afa9986c85eea7a34eddb1601246786173b055a70042ec1995362f93cc05.png" style="width: 701px; height: 331px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/5528afa9986c85eea7a34eddb1601246786173b055a70042ec1995362f93cc05.png"><img alt="../../../_images/5528afa9986c85eea7a34eddb1601246786173b055a70042ec1995362f93cc05.png" src="../../../_images/5528afa9986c85eea7a34eddb1601246786173b055a70042ec1995362f93cc05.png" style="width: 701px; height: 331px;" />
+</a>
 </div>
 </div>
 <section id="distribution-of-sectons">
@@ -1949,7 +1952,8 @@ INFO:ekorpkit.visualize.plot:Plotting histplot with {&#39;x&#39;: &#39;text_num_
 INFO:ekorpkit.visualize.base:Saved figure to /workspace/projects/ekorpkit-book/outputs/figs/HistPlot.png
 </pre></div>
 </div>
-<a class="reference internal image-reference" href="../../../_images/ac55445cc38c167b5c5382a3c893e02684ad8c40c952bda8e01b07873464123f.png"><img alt="../../../_images/ac55445cc38c167b5c5382a3c893e02684ad8c40c952bda8e01b07873464123f.png" src="../../../_images/ac55445cc38c167b5c5382a3c893e02684ad8c40c952bda8e01b07873464123f.png" style="width: 1277px; height: 1123px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/ac55445cc38c167b5c5382a3c893e02684ad8c40c952bda8e01b07873464123f.png"><img alt="../../../_images/ac55445cc38c167b5c5382a3c893e02684ad8c40c952bda8e01b07873464123f.png" src="../../../_images/ac55445cc38c167b5c5382a3c893e02684ad8c40c952bda8e01b07873464123f.png" style="width: 1277px; height: 1123px;" />
+</a>
 </div>
 </div>
 </section>
@@ -2349,7 +2353,8 @@ INFO:ekorpkit.io.file:Loading data from ../data/fomc/fomc_sents.parquet
 INFO:ekorpkit.visualize.base:Saved figure to /workspace/projects/ekorpkit-book/outputs/figs/CountPlot.png
 </pre></div>
 </div>
-<a class="reference internal image-reference" href="../../../_images/90e35c725d087982b710893a0b8840f384f30e9db8edfb2c8dd4e155f29323bf.png"><img alt="../../../_images/90e35c725d087982b710893a0b8840f384f30e9db8edfb2c8dd4e155f29323bf.png" src="../../../_images/90e35c725d087982b710893a0b8840f384f30e9db8edfb2c8dd4e155f29323bf.png" style="width: 701px; height: 331px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/90e35c725d087982b710893a0b8840f384f30e9db8edfb2c8dd4e155f29323bf.png"><img alt="../../../_images/90e35c725d087982b710893a0b8840f384f30e9db8edfb2c8dd4e155f29323bf.png" src="../../../_images/90e35c725d087982b710893a0b8840f384f30e9db8edfb2c8dd4e155f29323bf.png" style="width: 701px; height: 331px;" />
+</a>
 </div>
 </div>
 <section id="distribution-of-sentences">
@@ -2393,7 +2398,8 @@ INFO:ekorpkit.visualize.plot:Plotting histplot with {&#39;x&#39;: &#39;text_num_
 INFO:ekorpkit.visualize.base:Saved figure to /workspace/projects/ekorpkit-book/outputs/figs/HistPlot.png
 </pre></div>
 </div>
-<a class="reference internal image-reference" href="../../../_images/1f558cc17fd04808555bb71736f447659f53f4866fb89333dcd1ebae92a56073.png"><img alt="../../../_images/1f558cc17fd04808555bb71736f447659f53f4866fb89333dcd1ebae92a56073.png" src="../../../_images/1f558cc17fd04808555bb71736f447659f53f4866fb89333dcd1ebae92a56073.png" style="width: 1278px; height: 1123px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/1f558cc17fd04808555bb71736f447659f53f4866fb89333dcd1ebae92a56073.png"><img alt="../../../_images/1f558cc17fd04808555bb71736f447659f53f4866fb89333dcd1ebae92a56073.png" src="../../../_images/1f558cc17fd04808555bb71736f447659f53f4866fb89333dcd1ebae92a56073.png" style="width: 1278px; height: 1123px;" />
+</a>
 </div>
 </div>
 </section>
@@ -2802,7 +2808,8 @@ INFO:ekorpkit.io.file:Loading data from ../data/fomc/fomc_chunks.parquet
 INFO:ekorpkit.visualize.base:Saved figure to /workspace/projects/ekorpkit-book/outputs/figs/CountPlot.png
 </pre></div>
 </div>
-<a class="reference internal image-reference" href="../../../_images/acf4641fb20db2a4dd53c25872bc20653bf2d46fcdd6683a19a9fa1a15aed2ab.png"><img alt="../../../_images/acf4641fb20db2a4dd53c25872bc20653bf2d46fcdd6683a19a9fa1a15aed2ab.png" src="../../../_images/acf4641fb20db2a4dd53c25872bc20653bf2d46fcdd6683a19a9fa1a15aed2ab.png" style="width: 701px; height: 331px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/acf4641fb20db2a4dd53c25872bc20653bf2d46fcdd6683a19a9fa1a15aed2ab.png"><img alt="../../../_images/acf4641fb20db2a4dd53c25872bc20653bf2d46fcdd6683a19a9fa1a15aed2ab.png" src="../../../_images/acf4641fb20db2a4dd53c25872bc20653bf2d46fcdd6683a19a9fa1a15aed2ab.png" style="width: 701px; height: 331px;" />
+</a>
 </div>
 </div>
 <section id="distribution-of-chunks">
@@ -2846,7 +2853,8 @@ INFO:ekorpkit.visualize.plot:Plotting histplot with {&#39;x&#39;: &#39;text_num_
 INFO:ekorpkit.visualize.base:Saved figure to /workspace/projects/ekorpkit-book/outputs/figs/HistPlot.png
 </pre></div>
 </div>
-<a class="reference internal image-reference" href="../../../_images/709f9293a606e4c571c933f1ce49a3775b8e99495a6ddb2a4b8336545bc96a3e.png"><img alt="../../../_images/709f9293a606e4c571c933f1ce49a3775b8e99495a6ddb2a4b8336545bc96a3e.png" src="../../../_images/709f9293a606e4c571c933f1ce49a3775b8e99495a6ddb2a4b8336545bc96a3e.png" style="width: 1278px; height: 1123px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/709f9293a606e4c571c933f1ce49a3775b8e99495a6ddb2a4b8336545bc96a3e.png"><img alt="../../../_images/709f9293a606e4c571c933f1ce49a3775b8e99495a6ddb2a4b8336545bc96a3e.png" src="../../../_images/709f9293a606e4c571c933f1ce49a3775b8e99495a6ddb2a4b8336545bc96a3e.png" style="width: 1278px; height: 1123px;" />
+</a>
 </div>
 </div>
 </section>
@@ -2886,7 +2894,8 @@ INFO:ekorpkit.visualize.plot:Plotting countplot with {&#39;x&#39;: &#39;content_
 INFO:ekorpkit.visualize.base:Saved figure to /workspace/projects/ekorpkit-book/outputs/figs/CountPlot.png
 </pre></div>
 </div>
-<a class="reference internal image-reference" href="../../../_images/5983cef5b73adf070028d4790eba5a087a961a897487d7d40d2faa979357a718.png"><img alt="../../../_images/5983cef5b73adf070028d4790eba5a087a961a897487d7d40d2faa979357a718.png" src="../../../_images/5983cef5b73adf070028d4790eba5a087a961a897487d7d40d2faa979357a718.png" style="width: 1062px; height: 331px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/5983cef5b73adf070028d4790eba5a087a961a897487d7d40d2faa979357a718.png"><img alt="../../../_images/5983cef5b73adf070028d4790eba5a087a961a897487d7d40d2faa979357a718.png" src="../../../_images/5983cef5b73adf070028d4790eba5a087a961a897487d7d40d2faa979357a718.png" style="width: 1062px; height: 331px;" />
+</a>
 </div>
 </div>
 </section>
