--- a/lectures/dsecon/fomc/11_AutoML_with_tones.html
+++ b/lectures/dsecon/fomc/11_AutoML_with_tones.html
@@ -832,7 +832,8 @@ Best accuracy on validation data: 0.7456
 Training duration of best run: 0.08016 s
 </pre></div>
 </div>
-<a class="reference internal image-reference" href="../../../_images/f587ba075c7560f0fa9d3d1e63b8ed6744b95683ffa769546927062c4f48f246.png"><img alt="../../../_images/f587ba075c7560f0fa9d3d1e63b8ed6744b95683ffa769546927062c4f48f246.png" src="../../../_images/f587ba075c7560f0fa9d3d1e63b8ed6744b95683ffa769546927062c4f48f246.png" style="width: 702px; height: 331px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/f587ba075c7560f0fa9d3d1e63b8ed6744b95683ffa769546927062c4f48f246.png"><img alt="../../../_images/f587ba075c7560f0fa9d3d1e63b8ed6744b95683ffa769546927062c4f48f246.png" src="../../../_images/f587ba075c7560f0fa9d3d1e63b8ed6744b95683ffa769546927062c4f48f246.png" style="width: 702px; height: 331px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -862,7 +863,8 @@ ___________________________________________________
 weighted avg       0.60      0.65      0.59        66
 </pre></div>
 </div>
-<a class="reference internal image-reference" href="../../../_images/cc8a2946cb140e75180b44aa7ecf1eae70c7df6098f323a801ee21b7db9d4849.png"><img alt="../../../_images/cc8a2946cb140e75180b44aa7ecf1eae70c7df6098f323a801ee21b7db9d4849.png" src="../../../_images/cc8a2946cb140e75180b44aa7ecf1eae70c7df6098f323a801ee21b7db9d4849.png" style="width: 631px; height: 331px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/cc8a2946cb140e75180b44aa7ecf1eae70c7df6098f323a801ee21b7db9d4849.png"><img alt="../../../_images/cc8a2946cb140e75180b44aa7ecf1eae70c7df6098f323a801ee21b7db9d4849.png" src="../../../_images/cc8a2946cb140e75180b44aa7ecf1eae70c7df6098f323a801ee21b7db9d4849.png" style="width: 631px; height: 331px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -872,7 +874,8 @@ weighted avg       0.60      0.65      0.59        66
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/bcba89f9f1bec251ba974a79b3610fc473d31b875a042baf85a59cb7f7997a93.png"><img alt="../../../_images/bcba89f9f1bec251ba974a79b3610fc473d31b875a042baf85a59cb7f7997a93.png" src="../../../_images/bcba89f9f1bec251ba974a79b3610fc473d31b875a042baf85a59cb7f7997a93.png" style="width: 701px; height: 331px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/bcba89f9f1bec251ba974a79b3610fc473d31b875a042baf85a59cb7f7997a93.png"><img alt="../../../_images/bcba89f9f1bec251ba974a79b3610fc473d31b875a042baf85a59cb7f7997a93.png" src="../../../_images/bcba89f9f1bec251ba974a79b3610fc473d31b875a042baf85a59cb7f7997a93.png" style="width: 701px; height: 331px;" />
+</a>
 </div>
 </div>
 </section>
@@ -961,7 +964,8 @@ Training duration of best run: 0.2223 s
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/1d7a4db2c77287634fe7eae7cf5484b721be9286c7190f9e496cd2db0937a547.png"><img alt="../../../_images/1d7a4db2c77287634fe7eae7cf5484b721be9286c7190f9e496cd2db0937a547.png" src="../../../_images/1d7a4db2c77287634fe7eae7cf5484b721be9286c7190f9e496cd2db0937a547.png" style="width: 701px; height: 331px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/1d7a4db2c77287634fe7eae7cf5484b721be9286c7190f9e496cd2db0937a547.png"><img alt="../../../_images/1d7a4db2c77287634fe7eae7cf5484b721be9286c7190f9e496cd2db0937a547.png" src="../../../_images/1d7a4db2c77287634fe7eae7cf5484b721be9286c7190f9e496cd2db0937a547.png" style="width: 701px; height: 331px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -991,7 +995,8 @@ ___________________________________________________
 weighted avg       0.59      0.62      0.60        66
 </pre></div>
 </div>
-<a class="reference internal image-reference" href="../../../_images/829d805be99e5e3a0cbf6585538e52991119f1d7870049cf8344ea8d56c19523.png"><img alt="../../../_images/829d805be99e5e3a0cbf6585538e52991119f1d7870049cf8344ea8d56c19523.png" src="../../../_images/829d805be99e5e3a0cbf6585538e52991119f1d7870049cf8344ea8d56c19523.png" style="width: 631px; height: 331px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/829d805be99e5e3a0cbf6585538e52991119f1d7870049cf8344ea8d56c19523.png"><img alt="../../../_images/829d805be99e5e3a0cbf6585538e52991119f1d7870049cf8344ea8d56c19523.png" src="../../../_images/829d805be99e5e3a0cbf6585538e52991119f1d7870049cf8344ea8d56c19523.png" style="width: 631px; height: 331px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -1001,7 +1006,8 @@ weighted avg       0.59      0.62      0.60        66
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/0ca44f6cc48b2b207dc420e742cab34c9b91a44bbfa00e32e049d8c4f9785d5d.png"><img alt="../../../_images/0ca44f6cc48b2b207dc420e742cab34c9b91a44bbfa00e32e049d8c4f9785d5d.png" src="../../../_images/0ca44f6cc48b2b207dc420e742cab34c9b91a44bbfa00e32e049d8c4f9785d5d.png" style="width: 701px; height: 331px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/0ca44f6cc48b2b207dc420e742cab34c9b91a44bbfa00e32e049d8c4f9785d5d.png"><img alt="../../../_images/0ca44f6cc48b2b207dc420e742cab34c9b91a44bbfa00e32e049d8c4f9785d5d.png" src="../../../_images/0ca44f6cc48b2b207dc420e742cab34c9b91a44bbfa00e32e049d8c4f9785d5d.png" style="width: 701px; height: 331px;" />
+</a>
 </div>
 </div>
 </section>
@@ -1054,7 +1060,8 @@ Best accuracy on validation data: 0.732
 Training duration of best run: 0.06369 s
 </pre></div>
 </div>
-<a class="reference internal image-reference" href="../../../_images/4f1916501f6cf2ad4236ca005f5cefad30e00a713f9404b3a9d076122eda88f8.png"><img alt="../../../_images/4f1916501f6cf2ad4236ca005f5cefad30e00a713f9404b3a9d076122eda88f8.png" src="../../../_images/4f1916501f6cf2ad4236ca005f5cefad30e00a713f9404b3a9d076122eda88f8.png" style="width: 701px; height: 331px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/4f1916501f6cf2ad4236ca005f5cefad30e00a713f9404b3a9d076122eda88f8.png"><img alt="../../../_images/4f1916501f6cf2ad4236ca005f5cefad30e00a713f9404b3a9d076122eda88f8.png" src="../../../_images/4f1916501f6cf2ad4236ca005f5cefad30e00a713f9404b3a9d076122eda88f8.png" style="width: 701px; height: 331px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -1084,7 +1091,8 @@ ___________________________________________________
 weighted avg       0.60      0.71      0.64        66
 </pre></div>
 </div>
-<a class="reference internal image-reference" href="../../../_images/d9e94aabc9bef469f217fbc24a61e779abcbe71b62be8f880a9d0fe1b2a9dc8a.png"><img alt="../../../_images/d9e94aabc9bef469f217fbc24a61e779abcbe71b62be8f880a9d0fe1b2a9dc8a.png" src="../../../_images/d9e94aabc9bef469f217fbc24a61e779abcbe71b62be8f880a9d0fe1b2a9dc8a.png" style="width: 631px; height: 331px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/d9e94aabc9bef469f217fbc24a61e779abcbe71b62be8f880a9d0fe1b2a9dc8a.png"><img alt="../../../_images/d9e94aabc9bef469f217fbc24a61e779abcbe71b62be8f880a9d0fe1b2a9dc8a.png" src="../../../_images/d9e94aabc9bef469f217fbc24a61e779abcbe71b62be8f880a9d0fe1b2a9dc8a.png" style="width: 631px; height: 331px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -1094,7 +1102,8 @@ weighted avg       0.60      0.71      0.64        66
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/ef3b64452e797306f43c5be6da7e760bc46934d8261bc33ef02e59cb29fa6ecd.png"><img alt="../../../_images/ef3b64452e797306f43c5be6da7e760bc46934d8261bc33ef02e59cb29fa6ecd.png" src="../../../_images/ef3b64452e797306f43c5be6da7e760bc46934d8261bc33ef02e59cb29fa6ecd.png" style="width: 701px; height: 331px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/ef3b64452e797306f43c5be6da7e760bc46934d8261bc33ef02e59cb29fa6ecd.png"><img alt="../../../_images/ef3b64452e797306f43c5be6da7e760bc46934d8261bc33ef02e59cb29fa6ecd.png" src="../../../_images/ef3b64452e797306f43c5be6da7e760bc46934d8261bc33ef02e59cb29fa6ecd.png" style="width: 701px; height: 331px;" />
+</a>
 </div>
 </div>
 </section>
@@ -1147,7 +1156,8 @@ Best accuracy on validation data: 0.7327
 Training duration of best run: 0.07241 s
 </pre></div>
 </div>
-<a class="reference internal image-reference" href="../../../_images/21452427978f511d055dfb94afc8cf735159eb7192234e9d12e42c2c9983f83e.png"><img alt="../../../_images/21452427978f511d055dfb94afc8cf735159eb7192234e9d12e42c2c9983f83e.png" src="../../../_images/21452427978f511d055dfb94afc8cf735159eb7192234e9d12e42c2c9983f83e.png" style="width: 701px; height: 331px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/21452427978f511d055dfb94afc8cf735159eb7192234e9d12e42c2c9983f83e.png"><img alt="../../../_images/21452427978f511d055dfb94afc8cf735159eb7192234e9d12e42c2c9983f83e.png" src="../../../_images/21452427978f511d055dfb94afc8cf735159eb7192234e9d12e42c2c9983f83e.png" style="width: 701px; height: 331px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -1177,7 +1187,8 @@ ___________________________________________________
 weighted avg       0.69      0.71      0.65        66
 </pre></div>
 </div>
-<a class="reference internal image-reference" href="../../../_images/2010e8e6654a1c25758aa0d9b1ea11fe640314c3a104221d9091561779638470.png"><img alt="../../../_images/2010e8e6654a1c25758aa0d9b1ea11fe640314c3a104221d9091561779638470.png" src="../../../_images/2010e8e6654a1c25758aa0d9b1ea11fe640314c3a104221d9091561779638470.png" style="width: 631px; height: 331px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/2010e8e6654a1c25758aa0d9b1ea11fe640314c3a104221d9091561779638470.png"><img alt="../../../_images/2010e8e6654a1c25758aa0d9b1ea11fe640314c3a104221d9091561779638470.png" src="../../../_images/2010e8e6654a1c25758aa0d9b1ea11fe640314c3a104221d9091561779638470.png" style="width: 631px; height: 331px;" />
+</a>
 </div>
 </div>
 <div class="cell docutils container">
@@ -1187,7 +1198,8 @@ weighted avg       0.69      0.71      0.65        66
 </div>
 </div>
 <div class="cell_output docutils container">
-<a class="reference internal image-reference" href="../../../_images/5a10b4604faf486fe17df1a8474373cf7c72110a6e5d9940a953bf7135bc7743.png"><img alt="../../../_images/5a10b4604faf486fe17df1a8474373cf7c72110a6e5d9940a953bf7135bc7743.png" src="../../../_images/5a10b4604faf486fe17df1a8474373cf7c72110a6e5d9940a953bf7135bc7743.png" style="width: 702px; height: 331px;" /></a>
+<a class="reference internal image-reference" href="../../../_images/5a10b4604faf486fe17df1a8474373cf7c72110a6e5d9940a953bf7135bc7743.png"><img alt="../../../_images/5a10b4604faf486fe17df1a8474373cf7c72110a6e5d9940a953bf7135bc7743.png" src="../../../_images/5a10b4604faf486fe17df1a8474373cf7c72110a6e5d9940a953bf7135bc7743.png" style="width: 702px; height: 331px;" />
+</a>
 </div>
 </div>
 </section>
